fix "Local files are treated as URLs when placed on command line"

treat URLs w/o a scheme and w/o a leading slash as relative file paths;
on Qt 5.4 use the correct augmented version of
QUrl::fromUserInput(input, cwd)

BUG: 340418